--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,10 @@ strong {
 	color: $clr-primary;
 }
 
+.alt-color {
+	color: #ffd83b !important;
+}
+
 .max-width-wrapper,
 .copyright-wrapper {
 	@include container;
@@ -35,102 +39,163 @@ strong {
 	padding-right: 0px !important;
 }
 
-.swiper-wrapper {
-	box-sizing: border-box;
-	width: 100%;
-}
+.section-heading {
+	margin-bottom: em(7);
+	.section-title {
+		font-weight: 800;
+		color: #fff;
+		font-size: rem(36);
+		white-space: nowrap;
+		@media (max-width: 576px) {
+			font-size: 28px;
+			margin-bottom: 0;
+		}
 
-.swiper-container .swiper-wrapper .different-photo {
-	background-size: cover;
-}
-.alt-color {
-	color: #ffd83b !important;
-}
-.swiper-container .swiper-wrapper .swiper-slide {
-	background-size: cover;
-	background-position-y: bottom;
-
-	border-radius: 20px;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: end;
-	-ms-flex-align: end;
-	align-items: flex-end;
-	padding-bottom: 19px;
-	// Extra Small devices (landscape phones, 576px and up)
-	@media (max-width: 576px) {
-		min-height: 221px;
-		max-height: 221px;
-
-		min-width: 192px;
-		max-width: 192px;
-		a {
-			text-decoration: none;
-		}
-		section {
-			color: #fff;
-			text-decoration: none;
-			padding-left: 19px;
-			.swipe-event {
-				font-size: 18px;
-			}
-			.swipe-artist {
-				font-size: 14px;
-				font-weight: 400;
-			}
-		}
-	}
-	// Small devices (landscape phones, 576px and up)
-	@media (min-width: 576px) {
-		min-height: 221px;
-		max-height: 221px;
-		min-width: 192px;
-		max-width: 192px;
-		a {
-			text-decoration: none;
-		}
-		section {
-			color: #fff;
-			text-decoration: none;
-			padding-left: 19px;
-			.swipe-event {
-				font-size: 18px;
-			}
-			.swipe-artist {
-				font-size: 14px;
-				font-weight: 400;
-			}
-		}
-	}
-	// Medium devices (tablets, 768px and up)
-	@media (min-width: 768px) {
-		min-height: 221px;
-		max-height: 221px;
-		min-width: 192px;
-		max-width: 192px;
-		a {
-			text-decoration: none;
-		}
-		section {
-			color: #fff;
-			text-decoration: none;
-			padding-left: 19px;
-			.swipe-event {
-				font-size: 18px;
-			}
-			.swipe-artist {
-				font-size: 14px;
-				font-weight: 400;
-			}
+		@media (max-width: 576px) {
+			font-size: rem(24);
 		}
 	}
 }
 
-.nav-blur {
-	backdrop-filter: blur(25px);
-	-webkit-backdrop-filter: blur(25 px);
+/* Swiper global styles */
+.swiper-container {
+	height: 375px;
+
+	// @media (max-width: 500px) {
+	// 	width: 98%;
+	// }
+
+	.swiper-wrapper {
+		margin-top: em(5);
+		box-sizing: border-box;
+		width: 100%;
+
+		.different-photo {
+			background-size: cover;
+		}
+
+		.nav-blur {
+			backdrop-filter: blur(25px);
+			-webkit-backdrop-filter: blur(25px);
+		}
+	}
+	.hover-wrapper {
+		transition: all 0.3s ease-in-out;
+	}
+	.swiper-slide {
+		cursor: pointer;
+		width: calc(5vw - 20%);
+		max-width: 225px;
+		max-height: 305px;
+		margin: 0px 0px 0px rem(5);
+		border: 5px solid transparent;
+		display: flex;
+		flex-direction: column;
+		transition: all 0.3s ease-in-out;
+		// removed per HC request
+		// &:hover .hover-wrapper {
+		//   // transition: all 0.3s ease-in-out;
+		//   // margin-top: -20px;
+		// }
+
+		background-size: cover;
+		background-position-y: bottom;
+
+		border-radius: 20px;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: end;
+		-ms-flex-align: end;
+		align-items: flex-end;
+		padding-bottom: 19px;
+		// Extra Small devices (landscape phones, 576px and up)
+		@media (max-width: 576px) {
+			min-height: 221px;
+			max-height: 221px;
+
+			min-width: 192px;
+			max-width: 192px;
+			a {
+				text-decoration: none;
+			}
+			section {
+				color: #fff;
+				text-decoration: none;
+				padding-left: 19px;
+				.swipe-event {
+					font-size: 18px;
+				}
+				.swipe-artist {
+					font-size: 14px;
+					font-weight: 400;
+				}
+			}
+		}
+
+		.artist-img {
+			border-radius: 10px;
+		}
+		.event {
+			font-size: em(18);
+			margin: 20px 0 5px 0;
+			font-weight: 700;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			width: 225px;
+		}
+		.artist {
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			width: 225px;
+		}
+
+		//   ****removed per HC request****
+		// .btn-wrapper {
+		//   opacity: 0;
+		//   position: absolute;
+		//   top: 0;
+		//   width: 100%;
+		//   height: 102%;
+		//   border-radius: 10px;
+		//   // background-color: grey;
+		//   background-color: rgba(0,0,0,0.6);
+		//   transition: all 0.3s ease-in-out;
+		//   &:hover {
+		//     // transition: all 0.3s ease-in-out;
+		//     opacity: 1;
+		//   }
+		//   .slide-btn {
+		//     font-size: 12px;
+		//     border-radius: 8px;
+		//     border: 2px solid #ffdc4e;
+		//     width: 111px;
+		//     height: 41px;
+		//     margin-bottom: 10px;
+		//     &:active {
+		//       background-color: #ffcc00;
+		//     }
+		//   }
+		//   .btn-sos-main {
+		//     background-color: #FFDC4E;
+		//   }
+		//   .btn-sos-secondary {
+		//     color: white;
+		//     background-color: #20212B;
+		//     &:hover {
+		//       background-color: #ffdc4e;
+		//       color: black;
+		//       &:active {
+		//         background-color: #ffcc00;
+		//       }
+		//     }
+		//   }
+		// }
+	}
 }
+
 .profile-category-max-width {
 	max-width: 630px;
 	@media (max-width: 1200px) {
@@ -148,4 +213,5 @@ strong {
 	color: #000;
 	text-transform: uppercase;
 }
+
 @import "bootstrap";
